// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArchivedExperimentsAndRuns renders archived experiments page 1`] = `
<div
  className="page"
>
  <MD2Tabs
    onSwitch={[Function]}
    selectedTab={1}
    tabs={
      Array [
        "runs",
        "common:experiments",
      ]
    }
  />
  <EnhancedArchivedExperiments
    history={Object {}}
    location=""
    match=""
    t={[Function]}
    toolbarProps={Object {}}
    updateBanner={[Function]}
    updateDialog={[MockFunction]}
    updateSnackbar={[MockFunction]}
    updateToolbar={[Function]}
    view={1}
  />
</div>
`;

exports[`ArchivedExperimentsAndRuns renders archived runs page 1`] = `
<div
  className="page"
>
  <MD2Tabs
    onSwitch={[Function]}
    selectedTab={0}
    tabs={
      Array [
        "runs",
        "common:experiments",
      ]
    }
  />
  <EnhancedArchivedRuns
    history={Object {}}
    location=""
    match=""
    t={[Function]}
    toolbarProps={Object {}}
    updateBanner={[Function]}
    updateDialog={[MockFunction]}
    updateSnackbar={[MockFunction]}
    updateToolbar={[Function]}
    view={0}
  />
</div>
`;
